# personal-finance-v2

./: DEMO_GUIDE.md  README.md  action.py  agent6.py  decision.py  gateway.py  mcp_server.py  memory.py  perception.py  pyproject.toml
docs/validation_schemas/: FinalResponse.schema.json  NextAction.schema.json  PerceptionOutput.schema.json
transcripts/: query_A.txt  query_B.txt  query_C1.txt  query_C2.txt  query_D.txt
